--- a/Dashboard/Areas/TeamEntity/Views/Player/_PlayerModals.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/_PlayerModals.cshtml
@@ -19,6 +19,17 @@
                         <div class="row mb-1">
                             <input type="hidden" name="Fk_AccountTeamGameWeak" value="0" />
                         </div>
+                        
+                        <div class="col-md-12 col-12">
+                            <div class="mb-1">
+                                <label class="form-label">@Localizer.Get("GameWeak")</label>
+                                <select class="select2 form-select" name="Fk_GameWeak"
+                                        asp-items="@(new SelectList(ViewData["GameWeak"] as Dictionary<string, string>, "Key", "Value"))">
+                                    <option value="">@Localizer.Get("Not Selected")</option>
+                                </select>
+
+                            </div>
+                        </div>
 
                         <div class="row">
                             <div class="col-12">
