--- a/Dashboard/Areas/PlayerStateEntity/Views/PlayerGameWeakScoreState/Filter.cshtml
+++ b/Dashboard/Areas/PlayerStateEntity/Views/PlayerGameWeakScoreState/Filter.cshtml
@@ -94,7 +94,7 @@
             <br />
             <div class="row g-1 mb-md-1">
                 <div class="col-12">
-                    <button type="submit" class="btn btn-primary">@Localizer.Get("Search")</button>
+                    <button type="submit" class="btn btn-primary player_gameweak_state_score_filter">@Localizer.Get("Search")</button>
                     <button type="reset" class="btn btn-outline-secondary">@Localizer.Get("Reset")</button>
 
                 </div>
