--- a/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeakScore/Index.cshtml
+++ b/Dashboard/Areas/PlayerScoreEntity/Views/PlayerGameWeakScore/Index.cshtml
@@ -171,8 +171,8 @@ else
 
         function LoadTable() {
             var dt_ajax_table = $('.datatables');
-            if (dt_ajax_table.length) {
-                var dt_ajax = dt_ajax_table.dataTable({
+            if ( $('.datatables').length) {
+                var dt_ajax =  $('.datatables').dataTable({
                     // Ajax Filter
                     ajax: {
                         url: '@Url.Action("LoadTable")',
@@ -218,7 +218,7 @@ else
 
                 $('body').on('submit', '.filter', function () {
                     event.preventDefault();
-                    dt_ajax_table.DataTable().draw();
+                     $('.datatables').DataTable().draw();
                 });
 
 
