--- a/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
@@ -1,9 +1,11 @@
 ﻿@model PlayerDto
-
+@using Entities.AuthenticationModels
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     var playerPrice = new PlayerPriceDto();
     ViewBag.emptyLayout = true;
+    
+    int dashboardRole = ((UserAuthenticatedDto)ViewData["auth"]).Fk_DashboardAdministrationRole;
 }
 
 <div class="card">
@@ -50,8 +52,11 @@
         <hr/>
         
         <div class="card-body">
-            <a class="btn btn-primary update_account_team_points">@Localizer.Get("UpdateAccountTeamPoints")</a>
-            <hr/>
+            @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer)
+            {
+                <a class="btn btn-primary update_account_team_points">@Localizer.Get("UpdateAccountTeamPoints")</a>
+                <hr/>
+            }
             <div class="d-flex justify-content-between align-items-start">
                 <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.PlayerPrices)</span>
             </div>
