--- a/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
+++ b/Dashboard/Areas/AccountTeamEntity/Views/AccountTeam/Profile.cshtml
@@ -94,11 +94,11 @@
 
                                 </div>
                                 <div class="card-body" style="overflow-x: auto">
-                                @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer)
-                                {
+                                @* @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer) *@
+                                @* { *@
                                     <a class="btn btn-primary update_account_team_points">@Localizer.Get("UpdateAccountTeamPoints")</a>
                                     <hr>
-                                }
+                                @* } *@
                                     <div class="d-flex justify-content-between align-items-start">
                                         <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.AccountTeamGameWeaks)</span>
                                     </div>
