--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Profile.cshtml
@@ -119,12 +119,12 @@
                         <hr />
 
                         <div class="card-body" style="overflow-x: auto">
-                            @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer)
-                            {
+                            @* @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer) *@
+                            @* { *@
                                 <a class="btn btn-primary update_game_result">@Localizer.Get("UpdateGameResult")</a>
                                 <a class="btn btn-info update_teams_players">@Localizer.Get("UpdateTeamsPlayers")</a>
                                 <hr>
-                            }
+                            @* } *@
                             <div class="d-flex justify-content-between align-items-start">
                                 <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.HomeTeamPlayers)</span>
                             </div>
