--- a/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Player/Details.cshtml
@@ -52,11 +52,11 @@
         <hr/>
         
         <div class="card-body">
-            @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer)
-            {
+            @* @if (dashboardRole == (int)DashboardAdministrationRoleEnum.Developer) *@
+            @* { *@
                 <a class="btn btn-primary update_account_team_points">@Localizer.Get("UpdateAccountTeamPoints")</a>
                 <hr/>
-            }
+            @* } *@
             <div class="d-flex justify-content-between align-items-start">
                 <span class="badge bg-light-primary">@Html.DisplayNameFor(model => Model.PlayerPrices)</span>
             </div>
